<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="#9b2fb9"
    tools:context="writetoandreadfromfile.myandroid.achitu.calcounter.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/calCounterId"
        android:text="@string/calCounterTitleId"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:textColor="#370863"
        android:textSize="30dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/calCountImageId"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/calCounterId"
        android:src="@drawable/cal_counter_img"/>


    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:id="@+id/linearLayoutId"
        android:layout_below="@+id/calCountImageId"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/emptybox"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="250dp"
            android:id="@+id/foodnameId"
            android:layout_marginTop="13dp"
            android:padding="15dp"
            android:paddingLeft="7dp"
            android:hint="@string/food_name"
            android:layout_height="match_parent" />

        <EditText
            android:layout_width="250dp"
            android:id="@+id/caloriesNumId"
            android:layout_marginTop="13dp"
            android:padding="15dp"
            android:paddingLeft="7dp"
            android:hint="@string/calories"
            android:layout_height="match_parent" />

        <Button
            android:layout_width="100dp"
            android:id="@+id/submitButtonId"
            android:text="@string/submit_button"
            android:textSize="20dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:layout_height="50dp" />

    </LinearLayout>



</RelativeLayout>
