<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#253fb1"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="myandroid.achitu.fooddetails.food_details_activity"
    tools:showIn="@layout/activity_food_details_activity">

    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/cal_counter_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/detsImageVwId"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/detsLayoutId"
        android:layout_below="@+id/detsImageVwId"
        android:layout_marginTop="10dp"
        android:background="@drawable/emptybox"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/detsFoodNameId"
            android:text="Food Name"
            android:textColor="#8b1b3c"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/detsCaloriesId"

            android:text="@string/dets_calories"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/dets_dateConsumed"
            android:layout_gravity="center"
            android:id="@+id/detsDatetakenId"
            android:textStyle="italic"
            android:textSize="15dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="70dp"
            android:id="@+id/detsShareBtnId"
            android:background="@drawable/circle"
            android:text="@string/dets_share_btn"
            android:layout_gravity="right"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="10dp"
            android:layout_height="70dp" />


    </LinearLayout>

</RelativeLayout>
